@@ -40,6 +40,8 @@
     <File name="./Test/TestDocumentTag.cs" subtype="Code" buildaction="Compile" />
     <File name="./Test/TestTextRange.cs" subtype="Code" buildaction="Compile" />
     <File name="./DocumentActions.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/TestDocumentActions.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/TestDocumentUndoManager.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
