@@ -1,0 +1,20 @@
+//
+// TestDocumentUndoManager: Test unit for DocumentUndoManager class.
+//
+// Author:
+//   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
+//
+// (C) 2007 Hector E. Gomez M
+
+using System;
+using NUnit.Framework;
+
+namespace Monodoc.Editor.Gui {
+[TestFixture()]
+public class TestDocumentUndoManager {
+	[Test()]
+	public void TestCase()
+	{
+	}
+}
+}
